--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 clap = { version = "4.4", features = ["derive"]}
 walkdir = "2"
 encoding_rs = "0.8"
-
+log = "0.4"
+env_logger = "0.11"
